--- a/pom.xml
+++ b/pom.xml
@@ -79,6 +79,12 @@
 			</dependency>
 			
 			<dependency>
+			  <groupId>org.hibernate</groupId>
+			  <artifactId>hibernate-ehcache</artifactId>
+			  <version>5.1.0.Final</version>
+			</dependency>
+			
+			<dependency>
 				<groupId>org.codehaus.jettison</groupId>
 				<artifactId>jettison</artifactId>
 				<version>1.3.7</version>
@@ -94,6 +100,13 @@
 				<groupId>javax.enterprise</groupId>
 				<artifactId>cdi-api</artifactId>
 				<version>2.0-EDR1</version>
+			</dependency>
+			
+			<dependency>
+			   <groupId>dom4j</groupId>
+			   <artifactId>dom4j</artifactId>
+			   <version>1.6.1</version>
+			   <scope>provided</scope>
 			</dependency>
 			
 			<!-- deltaspike -->
